# ApexeaAI

./: .gitignore  LICENCE  README.md  folder.py  main.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
AI/: __init__.py  ai.py  autobrowser.py  xpaths.json
Agents/: agents.py  webcrawler.py
AutoBrowser/: __init__.py  autobrowser.py  users.json
Backend/: __init__.py  api.py  app.py  database.py  httpcodes.py  server.py
Data/: models.py
Frontend/: frontend.py
Logger/: logger.py
Tests/: example.py
